--- a/code/CSS/Signup-Style.css
+++ b/code/CSS/Signup-Style.css
@@ -68,10 +68,12 @@ button {
     border-radius: 3px;
     cursor: pointer;
 }
+
 .error-message {
     color: #d9534f;
     margin-top: 5px;
 }
+
 #successMessage {
     /*set to invisible so we can activate it later*/
     display: none;
@@ -80,4 +82,9 @@ button {
     padding: 10px;
     border-radius: 5px;
     margin-top: 10px;
+}
+
+.container {
+    text-align: left;
+    background-color: #fff;
 }
