Connected Details page to Concert Browser and Added information to Details page
I changed the reference to the correct reference for the concert page to link to the details page. I also modified the CSS for the details page as well as added some of the information to the details page.

--- a/code/CSS/Details-Style.css
+++ b/code/CSS/Details-Style.css
@@ -61,9 +61,11 @@ article {
 }
 
 img {
+    margin-right: 2%;
+    float: left;
     height: auto;
-    width: 100%;
-    max-width: 100%;
+    width: 35%;
+    max-width: 35%;
 }
 
 figure {
@@ -98,17 +100,9 @@ h2 {
 }
 
 p {
-    line-height: 1.6;
+    line-height: 0.5;
+    font-size: medium;
     color: #555;
-}
-
-.linkbutton {
-    padding: 10px;
-    background-color: #333;
-    color: #fff;
-    text-decoration: none;
-    display: inline-block;
-    border-radius: 3px;
 }
 
 article {
