Modified Details page layout.
I changed the layout and line spacing of the description in the details page.

--- a/code/CSS/Details-Style.css
+++ b/code/CSS/Details-Style.css
@@ -105,6 +105,12 @@ p {
     color: #555;
 }
 
+p2 {
+    line-height: 1.5;
+    font-size: medium;
+    color: #555;
+}
+
 article {
     border: #333;
     flex: 0 1 80%;
