--- a/code/CSS/Details-Style.css
+++ b/code/CSS/Details-Style.css
@@ -106,9 +106,15 @@ p {
 }
 
 p2 {
+    
     line-height: 1.5;
     font-size: medium;
     color: #555;
+}
+
+lib {
+    padding-top: 20%;
+    line-height: 4;
 }
 
 article {
