fixed some styling inconsitencies within my CSS
CSS Trending and Signup CSS pages changed a little in the nav ul li as the headers were not consistent with one-another thus changes made to these

--- a/code/CSS/Signup-Style.css
+++ b/code/CSS/Signup-Style.css
@@ -14,17 +14,15 @@ header {
 
 nav ul {
     list-style-type: none;
-    margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
-    background-color: #444;
-    overflow: hidden;
 }
 
 nav ul li {
     display: inline;
     margin: 0 10px;
+    padding: 0;
 }
 
 nav a {
