--- a/code/CSS/User-Page.css
+++ b/code/CSS/User-Page.css
@@ -49,7 +49,7 @@ a:hover {
 }
 
 .container {
-    background: #eae1e1;
+    background: #d5d1d1;
     width: flex;
     margin: 0 auto;
     position: relative;
