created django classes and added our information

--- a/Database/mysite/myapp/templates/todos.html
+++ b/Database/mysite/myapp/templates/todos.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% block content %}||
-201>Todo List</h1>
+{% extends "base.html" %} {% block content %}
+<h1>Todo List</h1>
 <ul>
 {% for todo in todos %}
 <li>
