Updated server, so all pages should work!
If you find any that dont please fix them or comment below and state they are broken!

--- a/Database/mysite/myapp/templates/Concerts.html
+++ b/Database/mysite/myapp/templates/Concerts.html
@@ -16,9 +16,9 @@
             <ul>
                 <!-- always update these when you make a new header, do for all pages-->
                 <li><a href="{% url 'concerts' %}">Concerts</a></li>
-                <li><a href="search-form.html">Search</a></li>
-                <li><a href="login.html">Log In</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="{% url 'search-form'%}">Search</a></li>
+                <li><a href="{% url 'login'%}">Log In</a></li>
+                <li><a href="{% url 'signup'%}">Sign Up</a></li>
             </ul>
         </nav>
         <div id="cart-icon" onclick="showCart()">🛒</div>
