--- a/Database/mysite/myapp/templates/search-form.html
+++ b/Database/mysite/myapp/templates/search-form.html
@@ -2,9 +2,10 @@
 <html lang="en">
 
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/Style.css">
+    <link rel="stylesheet" href="{% static 'CSS/Style.css' %}">
     <script src="javaScript/cart.js" defer></script>
     <title>Search Form</title>
 </head>
