fixed displaying respective data in user page in database directory

--- a/Database/mysite/myapp/templates/userPage.html
+++ b/Database/mysite/myapp/templates/userPage.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <!-- <link rel="stylesheet" href="fontawesome/css/all.css"> -->
     <link rel="stylesheet" href="{% static 'CSS/User-page.css' %}">
+
+    <script src="{% static 'javaScript/userPage.js' %}" defer></script>
+
     <title>User Account</title>
 </head>
 
@@ -35,10 +38,10 @@
         <div class="w-100 d-flex justify-content-between">
             <div class="w-25 leftbox">
                 <div>
-                    <a id="ticketButton" href="#">My Tickets</a>
+                    <a id="ticketButton" >My Tickets</a>
                 </div>
                 <div>
-                    <a id="profileButton" href="#">Personal Information</a>
+                    <a id="profileButton" >Personal Information</a>
                 </div>
                 <div>
                     <a id="paymentButton" href="#">Payment Information</a>
