Re-Added all the implementation of the branch
I accidentally deleted my branch when solving a merge conflict with a different one. I have now gone back through and added the functionality it had previously.

--- a/Database/mysite/myapp/static/CSS/Details-Style.css
+++ b/Database/mysite/myapp/static/CSS/Details-Style.css
@@ -127,3 +127,20 @@ article {
     margin: 0 auto;
     margin-bottom: 10px;
 }
+
+.see-more-button {
+    float: right;
+    height: 60px;
+    width: 30%;
+    background-color: #555;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.see-more-button:hover {
+    background-color: #333;
+}
