--- a/Database/mysite/myapp/templates/Details.html
+++ b/Database/mysite/myapp/templates/Details.html
@@ -21,24 +21,106 @@
                 <li><a href="{% url 'signup'%}">Sign Up</a></li>
             </ul>
         </nav>
-        <div id="cart-icon" onclick="showCart()">🛒</div>
+        <d id="cart-icon" onclick="showCart()">🛒</d>
     </header>
 </body>
-<main>
+<main id="Details"></main>
+
+<script>
+
+function parseURLData(){
+   const url = new URL(window.location.href);
+   return url.searchParams.get('artist');
+}
+
+async function fetchArtistInfo(){
+    try {
+                const response = await fetch('/get_artists/');
+
+                if (!response.ok) {
+                    throw new Error(`Failed to fetch data. Status: ${response.status}`);
+                }
+
+                return await response.json();
+            } catch (error) {
+                console.error(error);
+                return null;
+            }
+        
+}
+
+async function fetchConcertInfo(){
+    try {
+                const response = await fetch('/get_concerts/');
+
+                if (!response.ok) {
+                    throw new Error(`Failed to fetch data. Status: ${response.status}`);
+                }
+
+                return await response.json();
+            } catch (error) {
+                console.error(error);
+                return null;
+            }
+        
+}
+
+function generateDetailsHtml(artist){
+    return`
     <article>
         <h1>
-            <!--Image-->
             <figure>
                 <img src="images/1-1_image_1080.jpg" alt="Band/person/ team IMG">
             </figure>
-            <!--Important Event Info-->
+            <a rel="author">${artist.ArtistName}</a>
+            <p>Location: Santa Monica Bay </p>
+            <p>Date: 3:00 PM 23/08/24</p>
+            <p>Price: $250</p>
+            <div>
+                <p2>
+                    <br> Description: The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog The quick brown fox jumped over
+                    the lazy dogThe quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog
+                    </br>
+                </p2>
+            </div>
+            <div>
+                <button class="see-more-button" onclick="addToCart('Artist Name', 250)">Add to Cart</button>
+            </div>
+        </h1>
+    </article>`;
+}
+
+async function renderDetails(){
+    const DetailsPage = document.getElementById('Details');
+
+    const artistData = await fetchArtistInfo();
+    const concertData = await fetchConcertInfo();
+
+    artistData.forEach(artist => {
+        if(artist.ArtistName == parseURLData()){
+            console.log(artist.ArtistName);
+            DetailsPage.innerHTML += generateDetailsHtml(artist);
+        }
+        
+    });
+}
+</script>
+<!--
+<main>
+    <article>
+        <h1>
+            
+            <figure>
+                <img src="images/1-1_image_1080.jpg" alt="Band/person/ team IMG">
+            </figure>
+            
             <a rel="author">Artist Name</a>
             <p>Location: Santa Monica Bay </p>
             <p>Date: 3:00 PM 23/08/24</p>
             <p>Price: $250</p>
             <div>
                 <p2>
-                    <!--Event Description-->
+                    
                     <br> Description: The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog The quick brown fox jumped over
                     the lazy dogThe quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog
                     </br>
@@ -50,8 +132,10 @@
         </h1>
     </article>
 </main>
+-->
 <script>
     window.onload = function() {
+        renderDetails();
         displayCartContent();
     };
 </script>
