--- a/Database/mysite/myapp/templates/userPage.html
+++ b/Database/mysite/myapp/templates/userPage.html
@@ -27,7 +27,8 @@
             <ul>
                 <li><a href="{% url 'concerts' %}">Concerts</a></li>
                 <li><a href="{% url 'search-form'%}">Search</a></li>
-                <li><a href="{% url 'home'%}">Log In</a></li>
+                <li><a href="{% url 'home'%}">home</a></li>
+                <li><a href="{% url 'logout'%}">Logout</a></li>
             </ul>
         </nav> 
     </header>
