--- a/Database/mysite/myapp/templates/search-results.html
+++ b/Database/mysite/myapp/templates/search-results.html
@@ -17,9 +17,14 @@
             <ul>
                 <!-- always update these when you make a new header, do for all pages-->
                 <li><a href="{% url 'concerts' %}">Concerts</a></li>
-                <li><a href="{% url 'search-form'%}">Search</a></li>
-                <li><a href="{% url 'login'%}">Log In</a></li>
-                <li><a href="{% url 'signup'%}">Sign Up</a></li>
+                <li><a href="{% url 'search-form' %}">Search</a></li>
+                {% if user.is_authenticated %}
+                    <li><span>Welcome, {{ user.username }}</span></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                    <li><a href="{% url 'signup'%}">Sign Up</a></li>
+                {% endif %}
             </ul>
         </nav>
         <div id="cart-icon" onclick="showCart()">🛒</div>
